# follow_camera

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/follow_msg/include/follow_msg/follow_msg/action/: get_red_dot_position.h  reset_tape_tracker.h  reset_tape_tracker.hpp  reset_tracker.h  reset_tracker.hpp  track_red_dot.h
install/follow_msg/include/follow_msg/follow_msg/action/detail/: get_red_dot_position__builder.hpp  get_red_dot_position__functions.h  get_red_dot_position__rosidl_typesupport_fastrtps_c.h  get_red_dot_position__rosidl_typesupport_fastrtps_cpp.hpp  get_red_dot_position__struct.h  reset_tracker__struct.h  (+27 more)
install/follow_msg/include/follow_msg/follow_msg/msg/: rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/follow_msg/include/follow_msg/follow_msg/srv/: get_red_dot_position.h
install/follow_msg/share/ament_index/resource_index/parent_prefix_path/: follow_msg
install/follow_msg/share/ament_index/resource_index/rosidl_interfaces/: follow_msg
install/follow_msg/share/follow_msg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/follow_msg/share/follow_msg/action/: GetRedDotPosition.idl  ResetTracker.idl
install/follow_msg/share/follow_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  export_follow_msg__rosidl_typesupport_fastrtps_cExport.cmake  export_follow_msg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  follow_msg__rosidl_typesupport_cExport-noconfig.cmake  follow_msg__rosidl_typesupport_cExport.cmake  follow_msg__rosidl_typesupport_cppExport.cmake  follow_msg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/follow_msg/share/follow_msg/srv/: GetRedDotPosition.idl  GetRedDotPosition.srv  GetRedDotPosition_Response.msg
install/follow_ros/lib/follow_ros/: camer_node  gimbal_controller  imu_msg  red_dot_tracker  reset_controller  tape_tracker
install/follow_ros/share/follow_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/follow_ros/share/follow_ros/launch/: tracker_system.launch.py
log/: latest_build
src/follow_msg/: CMakeLists.txt  package.xml
src/follow_msg/action/: GetRedDotPosition.action  ResetTapeTracker.action  ResetTracker.action
src/follow_ros/: package.xml  setup.cfg  setup.py
src/follow_ros/follow_ros/: camer_node.py  gimbal_controller.py  imu_msg.py  laser_power.py  red_dot_tracker.py  reset_controller.py  tape_tracker.py
src/follow_ros/launch/: tracker_system.launch.py
(+18 files in other folders)
